--- a/html/character-info.html
+++ b/html/character-info.html
@@ -5,8 +5,10 @@
     <div class="info">
         <h1>%s</h1>
         <h2>%s</h2>
+        <p>Franquia: %s</p>
     </div>
     <div class="icon">
+        <img src="%s">
         <img src="%s">
     </div>
     <div class="description">
